Add maven version output